--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.GenAIAndroidGameExam"
         tools:targetApi="31">
         <activity
+            android:name=".SaveGameActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".LoadGameActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
             android:name=".ConfigActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
